Added user auth. Also changed pom files because there was some conflict error which wasnt being solved even after 2 hours of debugging